--- a/src/index.html
+++ b/src/index.html
@@ -14,12 +14,12 @@
     <!-- source for dark mode, light mode, auto toggle -->
     <!-- <script src="../snipets/color-modes.js"></script> -->
     <!-- Bootstrap 5.3 cdn -->
-    <!-- <link
+    <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
-    /> -->
+    />
     <!-- <link href="../snipets/base.css" rel="stylesheet" /> -->
     <!-- <link href="styles.css" rel="stylesheet" /> -->
     <!-- Favicons -->
@@ -45,5 +45,191 @@
         <meta property="og:image:width" content="2000">
         <meta property="og:image:height" content="1000"> -->
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <h1 class="text-center">Scientific Calculator</h1>
+      <div class="row">
+        <div class="col-md-8 offet-md-2">
+          <div class="card">
+            <div class="card-body">
+              <input
+                id="calc-display"
+                readonly
+                class="form-control form-control-lg"
+                type="text"
+                aria-label="calc input window"
+              />
+              <div class="row gx-1">
+                <div class="col-3">
+                  <button
+                    type="button "
+                    class="w-100 border mt-2 btn btn-light"
+                  >
+                    (
+                  </button>
+                </div>
+                <div class="col-3">
+                  <button
+                    type="button "
+                    class="w-100 border mt-2 btn btn-light"
+                  >
+                    )
+                  </button>
+                </div>
+                <div class="col-3">
+                  <button
+                    type="button "
+                    class="w-100 border mt-2 btn btn-light"
+                  >
+                    %
+                  </button>
+                </div>
+                <div class="col-3">
+                  <button
+                    type="button "
+                    class="w-100 border mt-2 btn btn-light"
+                  >
+                    AC
+                  </button>
+                </div>
+                <div class="col-3">
+                  <button
+                    type="button "
+                    class="w-100 border mt-2 btn btn-light"
+                  >
+                    7
+                  </button>
+                </div>
+                <div class="col-3">
+                  <button
+                    type="button "
+                    class="w-100 border mt-2 btn btn-light"
+                  >
+                    8
+                  </button>
+                </div>
+                <div class="col-3">
+                  <button
+                    type="button "
+                    class="w-100 border mt-2 btn btn-light"
+                  >
+                    9
+                  </button>
+                </div>
+                <div class="col-3">
+                  <button
+                    type="button "
+                    class="w-100 border mt-2 btn btn-light"
+                  >
+                  ÷
+                  </button>
+                </div>
+                <div class="col-3">
+                  <button
+                    type="button "
+                    class="w-100 border mt-2 btn btn-light"
+                  >
+                    4
+                  </button>
+                </div>
+                <div class="col-3">
+                  <button
+                    type="button "
+                    class="w-100 border mt-2 btn btn-light"
+                  >
+                    5
+                  </button>
+                </div>
+                <div class="col-3">
+                  <button
+                    type="button "
+                    class="w-100 border mt-2 btn btn-light"
+                  >
+                    6
+                  </button>
+                </div>
+                <div class="col-3">
+                  <button
+                    type="button "
+                    class="w-100 border mt-2 btn btn-light"
+                  >
+                    X
+                  </button>
+                </div>
+                <div class="col-3">
+                  <button
+                    type="button "
+                    class="w-100 border mt-2 btn btn-light"
+                  >
+                    1
+                  </button>
+                </div>
+                <div class="col-3">
+                  <button
+                    type="button "
+                    class="w-100 border mt-2 btn btn-light"
+                  >
+                    2
+                  </button>
+                </div>
+                <div class="col-3">
+                  <button
+                    type="button "
+                    class="w-100 border mt-2 btn btn-light"
+                  >
+                    3
+                  </button>
+                </div>
+                <div class="col-3">
+                  <button
+                    type="button "
+                    class="w-100 border mt-2 btn btn-light"
+                  >
+                    -
+                  </button>
+                </div>
+                <div class="col-3">
+                  <button
+                    type="button "
+                    class="w-100 border mt-2 btn btn-light"
+                  >
+                    0
+                  </button>
+                </div>
+                <div class="col-3">
+                  <button
+                    type="button "
+                    class="w-100 border mt-2 btn btn-light"
+                  >
+                    .
+                  </button>
+                </div>
+                <div class="col-3">
+                  <button
+                    type="button "
+                    class="w-100 border border-primary mt-2 btn btn-primary"
+                  >
+                    =
+                  </button>
+                </div>
+                <div class="col-3">
+                  <button
+                    type="button "
+                    class="w-100 border mt-2 btn btn-light"
+                  >
+                    +
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
