simple calc working with safe expr-eval parser

--- a/src/index.html
+++ b/src/index.html
@@ -55,7 +55,7 @@
               <input
                 id="calc-display"
                 readonly
-                class="form-control form-control-lg"
+                class="form-control form-control-lg text-end"
                 type="text"
                 aria-label="calc input window"
               />
@@ -121,7 +121,7 @@
                     type="button "
                     class="w-100 border mt-2 btn btn-light"
                   >
-                  ÷
+                    ÷
                   </button>
                 </div>
                 <div class="col-3">
@@ -231,5 +231,6 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
+    <script type="module" src="main.js"></script>
   </body>
 </html>
