sub percent, auto insert * when applicable

--- a/src/index.html
+++ b/src/index.html
@@ -279,6 +279,38 @@
                     CE
                   </button>
                 </div>
+                <div class="col-3">
+                  <button
+                    type="button "
+                    class="w-100 border mt-2 btn btn-light"
+                  >
+                    PI
+                  </button>
+                </div>
+                <div class="col-3">
+                  <button
+                    type="button "
+                    class="w-100 border mt-2 btn btn-light operator"
+                  >
+                    ln
+                  </button>
+                </div>
+                <div class="col-3">
+                  <button
+                    type="button "
+                    class="w-100 border mt-2 btn btn-light operator"
+                  >
+                    !
+                  </button>
+                </div>
+                <div class="col-3">
+                  <button
+                    type="button "
+                    class="w-100 border mt-2 btn btn-light"
+                  >
+                    ANS
+                  </button>
+                </div>
               </div>
             </div>
           </div>
